test/syntax/fail/not_boolean_like_in_every.sync
let node g (s : int) = s

let node f (s : int) =
  g 3 every s
